Work-in-progress full modularisation of Synergy. This adds MRJAR (Multi-release JAR) support to all artifacts, with module-info.class being java9 and above, and the rest java8.
There are remaining issues with unit testing and eclipse integration.