@@ -19,6 +19,7 @@
 package com.sshtools.common.auth;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 import com.sshtools.common.ssh.SshConnection;
 
@@ -33,8 +34,8 @@ public class KeyboardInteractiveAuthenticator implements KeyboardInteractiveAuth
 	@Override
 	public KeyboardInteractiveProvider createInstance(SshConnection con) throws IOException {
 		try {
-			return clz.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			return clz.getConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new IOException(e.getMessage(), e);
 		}
 	}
