@@ -18,6 +18,7 @@
  */
 package com.sshtools.common.ssh.components.jce;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
@@ -115,8 +116,8 @@ public class JCEComponentManager extends ComponentManager implements JCEAlgorith
 		try {
 			@SuppressWarnings({ "unchecked" })
 			Class<? extends Provider> clz = (Class<? extends Provider>) Class.forName("net.i2p.crypto.eddsa.EdDSASecurityProvider");
-			Security.addProvider(clz.newInstance());
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+			Security.addProvider(clz.getConstructor().newInstance());
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new IllegalStateException(e.getMessage(), e);
 		}
 	}
@@ -430,7 +431,7 @@ public class JCEComponentManager extends ComponentManager implements JCEAlgorith
 		}
 		
 		try {
-			SshPublicKey key = pub.newInstance();
+			SshPublicKey key = pub.getConstructor().newInstance();
 			String provider = key.test();
 			if(Log.isDebugEnabled())
 				Log.debug("   " + name + " will be supported using JCE Provider " + provider);
@@ -488,7 +489,7 @@ public class JCEComponentManager extends ComponentManager implements JCEAlgorith
 		
 		SshCipher c = null;
 		try {
-			c = (SshCipher) cls.newInstance();
+			c = (SshCipher) cls.getConstructor().newInstance();
 			byte[] tmp = new byte[1024];
 			getSecureRandom().nextBytes(tmp);
 			c.init(SshCipher.ENCRYPT_MODE, tmp, tmp);
@@ -518,7 +519,7 @@ public class JCEComponentManager extends ComponentManager implements JCEAlgorith
 		
 		Digest c = null;
 		try {
-			c = (Digest) cls.newInstance();
+			c = (Digest) cls.getConstructor().newInstance();
 
 			if (c instanceof AbstractDigest)
 				if(Log.isDebugEnabled())
@@ -549,7 +550,7 @@ public class JCEComponentManager extends ComponentManager implements JCEAlgorith
 		
 		SshHmac c = null;
 		try {
-			c = (SshHmac) cls.newInstance();
+			c = (SshHmac) cls.getConstructor().newInstance();
 			byte[] tmp = new byte[1024];
 			c.init(tmp);
 
